@@ -22,6 +22,8 @@
 
 package org.gudy.azureus2.plugins.ui.model;
 
+import org.gudy.azureus2.plugins.logging.*;
+
 /**
  * @author parg
  *
@@ -68,4 +70,20 @@ BasicPluginViewModel
 	 */
 	public String
 	getConfigSectionID();
+	
+	/**
+	 * Convenience method to configure this model to receive any logged
+	 * messages on the associated channel and display it in the main
+	 * window area.
+	 * 
+	 * <p>
+	 * 
+	 * You can handle this manually if you want to, by creating your own
+	 * {@link LoggerChannelListener} instance and making it append to the
+	 * log area on this object.
+	 *
+	 * @since 3.0.5.3
+	 * @param channel The log channel to listen to.
+	 */
+	public void attachLoggerChannel(LoggerChannel channel);
 }
