@@ -11,6 +11,7 @@ FEATURE: UI   | Plugin menu items which in the right-click menu now appear in th
 FEATURE: UIv3 | Experimental option to use Mozilla/Firefox as browser widget on any platform (XulRunner or Firefox 3 must be installed) [The 8472]
 FEATURE: Plug | Added resource downloader to provide way to download files from Sourceforge [amc1]
 FEATURE: Plug | Added API methods to generically pop up the message box to a user [amc1]
+FEATURE: Plug | Added various convenience methods for using log views and config models [amc1]
 
 CHANGE: Core  | added "upload_only" flag to AZMP/LTEP handshakes, disconnect any uploading_only peers we don't need / that don't need us when disconnect seeds when seeding is set [The 8472]
 CHANGE: Core  | Further startup speed improvements [The 8472, amc1, parg]
